@@ -19,5 +19,5 @@
 
 rm -f ns1/named.conf ns1/myftp.db
 rm -f */named.memstats
-rm -f dig.out
+rm -f dig.out dig.out1 dig.out2 dig.out3
 rm -f ns3/large.db
